--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.1",
+    "typescript": "^5.6.3"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
